--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "monaca"
   ],
   "dependencies": {
-    "angular": "~1.3.0"
+    "angular": "~1.3.0",
+    "ng-autofocus": "~0.0.1"
   },
   "license": "Apache License, Version 2.0",
   "ignore": [
